<resources>
    <string name="app_name">StoreView</string>
    <string name="go_to_register">Registrate</string>
    <string name="go_to_log_in">Ingresar</string>
    <string name="email">E-mail</string>
    <string name="nick">Usuario</string>
    <string name="nick_user">Usuario o E-mail</string>
    <string name="password">Contraseña</string>
    <string name="full_name">Nombre Completo</string>
    <string name="phone_number">Número Télefonico</string>
    <string name="confirm_password">Confirme contraseña</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">StoreView</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Perfil</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_map">Mapa</string>
    <string name="prueba">Prueba</string>

    <string name="home">Principal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navegacion">NavegacionActivity</string>
</resources>
