<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_home_principal"
        android:name="com.co.storeview.Fragmentos.HomeFragment"
        android:label="@string/prueba"
        tools:layout="@layout/activity_main">

        <argument
            android:name="myArg"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_home_principal_to_nav_profile3"
            app:destination="@id/nav_profile" />
        <action
            android:id="@+id/action_nav_home_principal_to_nav_map"
            app:destination="@id/nav_map" />
        <action
            android:id="@+id/action_nav_home_principal_to_nav_search"
            app:destination="@id/nav_search" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.co.storeview.Fragmentos.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/nav_search"
        android:name="com.co.storeview.Fragmentos.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.co.storeview.Fragmentos.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

</navigation>