<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/BlueBack"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_rounded"
        android:drawableLeft="@drawable/login"
        android:drawablePadding="18dp"
        android:onClick="logIn"
        android:text="@string/go_to_log_in"
        android:textAllCaps="false"
        android:textColor="#131313"
        android:textColorHint="#CD1818"
        android:textSize="20sp"
        app:backgroundTint="#f9b62e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_rounded_border"
        android:drawableLeft="@drawable/register"
        android:drawablePadding="18dp"
        android:onClick="register"
        android:text="@string/go_to_register"
        android:textColor="#ffffff"
        android:textColorHint="#CD1818"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/shopCar"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carrito_compras"
        tools:srcCompat="@drawable/carrito_compras" />

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/YellowFire"
        android:textColorHint="@color/YellowFire"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/nick_user"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/passText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopCar"
        app:layout_constraintVertical_bias="0.378" />

    <EditText
        android:id="@+id/passText"
        android:layout_width="299dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/YellowFire"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/YellowFire"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>