<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueBack"
    tools:context=".RegisterUserActivity">

    <ImageView
        android:id="@+id/shopCar"
        android:layout_width="135dp"
        android:layout_height="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/carrito_compras"
        tools:srcCompat="@drawable/carrito_compras" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/YellowFire"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/YellowFire"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <EditText
        android:id="@+id/userText"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/YellowFire"
        android:ems="10"
        android:hint="@string/nick"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/YellowFire"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/nameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopCar"
        app:layout_constraintVertical_bias="0.444" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/YellowFire"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/YellowFire"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/passTextIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passTextIn"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:backgroundTint="@color/YellowFire"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/YellowFire"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/confirmPassTextIn"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/YellowFire"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/YellowFire"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <EditText
        android:id="@+id/numberPhoneText"
        android:layout_width="341dp"
        android:layout_height="41dp"
        android:backgroundTint="@color/YellowFire"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/YellowFire"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="96dp"
        android:layout_height="98dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/button_rounded"
        android:onClick="register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/register_black" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="96dp"
        android:layout_height="98dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/button_rounded_border"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login_ligth" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ya tengo cuenta"
        android:textColor="@color/YellowFire"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="83dp"
        android:layout_height="19dp"
        android:text="Registrarme"
        android:textColor="@color/YellowFire"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

</androidx.constraintlayout.widget.ConstraintLayout>